--- a/site/index.html
+++ b/site/index.html
@@ -4,5 +4,7 @@
     </head>
     <body>
         <h1>Hello Coursera !</h1>
+        <h2>It's a really great course ! <br>
+            Learning about Git, Github, HTML5, CSS, JavaScript, Node.js, npm, etc</h2>
     </body>
 </html>
